deployment/overlays/tls-backend/envoyfilter-authorino-tls.yaml
# EnvoyFilter to configure TLS between Gateway and Authorino
#
# Required because without service mesh sidecars, the Gateway cannot automatically
# trust the Authorino TLS certificate. This patches the Authorino cluster config
# to use the OpenShift service-ca for certificate validation.
#
# See: https://issues.redhat.com/browse/CONNLINK-528
# Temporary workaround until fixed in odh-model-controller.
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: maas-default-gateway-authorino-cluster-tls
  namespace: openshift-ingress
  labels:
    app.kubernetes.io/part-of: models-as-a-service
    app.kubernetes.io/component: gateway-tls
spec:
  priority: -1
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: maas-default-gateway
  configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          service: authorino-authorino-authorization.kuadrant-system.svc.cluster.local
      patch:
        operation: ADD
        value:
          name: kuadrant-auth-service
          type: STRICT_DNS
          connect_timeout: 1s
          http2_protocol_options: {}
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: kuadrant-auth-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: authorino-authorino-authorization.kuadrant-system.svc.cluster.local
                          port_value: 50051
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                validation_context:
                  trusted_ca:
                    filename: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
